<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:context=".ItemDetailActivity">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/item_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/item_price"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemImage" />

        <EditText
            android:id="@+id/itemQuantity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:autofillHints="@string/default_quantity"
            android:ems="10"
            android:inputType="number"
            android:text="@string/default_quantity"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/itemImage"
            app:layout_constraintStart_toEndOf="@+id/btnRemove"
            app:layout_constraintTop_toBottomOf="@+id/shortDescription" />

        <ImageView
            android:id="@+id/btnAdd"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:contentDescription="@string/increase_quantity"
            app:layout_constraintBottom_toBottomOf="@+id/itemQuantity"
            app:layout_constraintStart_toEndOf="@+id/itemQuantity"
            app:srcCompat="@drawable/increase" />

        <ImageView
            android:id="@+id/btnRemove"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:contentDescription="@string/decrease_quantity"
            app:layout_constraintBottom_toBottomOf="@+id/itemQuantity"
            app:layout_constraintStart_toEndOf="@+id/itemImage"
            app:srcCompat="@drawable/decrease" />

        <TextView
            android:id="@+id/itemPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/item_price"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/itemPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemImage" />

        <TextView
            android:id="@+id/energyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/nutrition_information"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allergen" />

        <TextView
            android:id="@+id/ingredientTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/ingredient"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

        <TextView
            android:id="@+id/nutritionInfomation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/nutritionList"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/energyTitle" />

        <TextView
            android:id="@+id/ingredient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/ingredient"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientTitle" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle" />

        <Button
            android:id="@+id/addOrder"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="69dp"
            android:layout_marginRight="69dp"
            android:background="@drawable/add_button_style"
            android:text="Add"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemQuantity" />

        <TextView
            android:id="@+id/nutritionInforValue"
            android:layout_width="wrap_content"
            android:layout_height="171dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:gravity="right"
            android:text="TextView"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/nutritionInfomation"
            app:layout_constraintTop_toTopOf="@+id/nutritionInfomation" />

        <TextView
            android:id="@+id/allergenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/allergen"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient" />

        <TextView
            android:id="@+id/allergen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/allergen"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allergenTitle" />

        <TextView
            android:id="@+id/shortDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/short_description"
            android:textSize="15sp"
            app:fontFamily="cursive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemImage"
            app:layout_constraintTop_toBottomOf="@+id/itemName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>